[package]
name = "org-processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "org-checker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.0.29", features = ["derive"] }
orgize = { version = "0.9.0", features = ["chrono"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
