[package]
name = "org-processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "org-checker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.0.29", features = ["derive"] }
once_cell = "1.16.0"
orgize = { version = "0.9.0", features = ["chrono"] }
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
