[package]
name = "org-processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "org-checker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["unstable-locales"] }
chrono-tz = "0.8.1"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.16.0"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
